--- a/msvs_solution/tests/packages.config
+++ b/msvs_solution/tests/packages.config
@@ -17,7 +17,7 @@
   <package id="libutki" version="1.1.93" targetFramework="native" />
   <package id="pixman_static" version="0.32.4.10" targetFramework="native" />
   <package id="pugixml" version="1.10.0" targetFramework="native" />
-  <package id="puu" version="0.1.18" targetFramework="native" />
-  <package id="r4" version="1.0.20" targetFramework="native" />
+  <package id="libpuu" version="0.1.21" targetFramework="native" />
+  <package id="libr4" version="1.0.30" targetFramework="native" />
   <package id="zlib_static" version="1.2.11.5" targetFramework="native" />
 </packages>
