--- a/msvs_solution/tests/tests.vcxproj
+++ b/msvs_solution/tests/tests.vcxproj
@@ -294,11 +294,11 @@
     <Import Project="..\packages\libmikroxml.0.1.23\build\native\libmikroxml.targets" Condition="Exists('..\packages\libmikroxml.0.1.23\build\native\libmikroxml.targets')" />
     <Import Project="..\packages\libopros.1.0.38\build\native\libopros.targets" Condition="Exists('..\packages\libopros.1.0.38\build\native\libopros.targets')" />
     <Import Project="..\packages\libnitki.1.0.32\build\native\libnitki.targets" Condition="Exists('..\packages\libnitki.1.0.32\build\native\libnitki.targets')" />
-    <Import Project="..\packages\r4.1.0.20\build\native\r4.targets" Condition="Exists('..\packages\r4.1.0.20\build\native\r4.targets')" />
+    <Import Project="..\packages\libr4.1.0.30\build\native\libr4.targets" Condition="Exists('..\packages\libr4.1.0.30\build\native\libr4.targets')" />
     <Import Project="..\packages\zlib_static.1.2.11.5\build\native\zlib_static.targets" Condition="Exists('..\packages\zlib_static.1.2.11.5\build\native\zlib_static.targets')" />
     <Import Project="..\packages\libpapki.1.0.82\build\native\libpapki.targets" Condition="Exists('..\packages\libpapki.1.0.82\build\native\libpapki.targets')" />
     <Import Project="..\packages\libsvgdom.0.3.39\build\native\libsvgdom.targets" Condition="Exists('..\packages\libsvgdom.0.3.39\build\native\libsvgdom.targets')" />
-    <Import Project="..\packages\puu.0.1.18\build\native\puu.targets" Condition="Exists('..\packages\puu.0.1.18\build\native\puu.targets')" />
+    <Import Project="..\packages\libpuu.0.1.21\build\native\libpuu.targets" Condition="Exists('..\packages\libpuu.0.1.21\build\native\libpuu.targets')" />
     <Import Project="..\packages\libcssdom.0.1.8\build\native\libcssdom.targets" Condition="Exists('..\packages\libcssdom.0.1.8\build\native\libcssdom.targets')" />
     <Import Project="..\packages\freetype_static.2.10.1.6\build\native\freetype_static.targets" Condition="Exists('..\packages\freetype_static.2.10.1.6\build\native\freetype_static.targets')" />
     <Import Project="..\packages\libjpeg_static.6.1.1.8\build\native\libjpeg_static.targets" Condition="Exists('..\packages\libjpeg_static.6.1.1.8\build\native\libjpeg_static.targets')" />
@@ -319,11 +319,11 @@
     <Error Condition="!Exists('..\packages\libmikroxml.0.1.23\build\native\libmikroxml.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libmikroxml.0.1.23\build\native\libmikroxml.targets'))" />
     <Error Condition="!Exists('..\packages\libopros.1.0.38\build\native\libopros.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libopros.1.0.38\build\native\libopros.targets'))" />
     <Error Condition="!Exists('..\packages\libnitki.1.0.32\build\native\libnitki.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libnitki.1.0.32\build\native\libnitki.targets'))" />
-    <Error Condition="!Exists('..\packages\r4.1.0.20\build\native\r4.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\r4.1.0.20\build\native\r4.targets'))" />
+    <Error Condition="!Exists('..\packages\libr4.1.0.30\build\native\libr4.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libr4.1.0.30\build\native\libr4.targets'))" />
     <Error Condition="!Exists('..\packages\zlib_static.1.2.11.5\build\native\zlib_static.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\zlib_static.1.2.11.5\build\native\zlib_static.targets'))" />
     <Error Condition="!Exists('..\packages\libpapki.1.0.82\build\native\libpapki.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpapki.1.0.82\build\native\libpapki.targets'))" />
     <Error Condition="!Exists('..\packages\libsvgdom.0.3.39\build\native\libsvgdom.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libsvgdom.0.3.39\build\native\libsvgdom.targets'))" />
-    <Error Condition="!Exists('..\packages\puu.0.1.18\build\native\puu.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\puu.0.1.18\build\native\puu.targets'))" />
+    <Error Condition="!Exists('..\packages\libpuu.0.1.21\build\native\libpuu.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpuu.0.1.21\build\native\libpuu.targets'))" />
     <Error Condition="!Exists('..\packages\libcssdom.0.1.8\build\native\libcssdom.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libcssdom.0.1.8\build\native\libcssdom.targets'))" />
     <Error Condition="!Exists('..\packages\freetype_static.2.10.1.6\build\native\freetype_static.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\freetype_static.2.10.1.6\build\native\freetype_static.targets'))" />
     <Error Condition="!Exists('..\packages\libjpeg_static.6.1.1.8\build\native\libjpeg_static.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libjpeg_static.6.1.1.8\build\native\libjpeg_static.targets'))" />
