--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,9 +12,23 @@
             ]
         },
         {
+            "label": "build_debug",
+            "type": "shell",
+            "command": "make autojobs=true config=dbg",
+            "problemMatcher": [
+                "$gcc"
+            ]
+        },
+        {
             "label": "clean",
             "type": "shell",
             "command": "make clean",
+            "problemMatcher": []
+        },
+        {
+            "label": "clean_debug",
+            "type": "shell",
+            "command": "make clean config=dbg",
             "problemMatcher": []
         },
         {
@@ -23,6 +37,13 @@
             "command": "make run",
             "problemMatcher": [],
             "dependsOn": "build"
+        },
+        {
+            "label": "run_debug",
+            "type": "shell",
+            "command": "make run config=dbg",
+            "problemMatcher": [],
+            "dependsOn": "build_debug"
         }
     ]
 }
