--- a/android/mordavokne/src/main/AndroidManifest.xml
+++ b/android/mordavokne/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="io.github.igagis.mordavokne">
+    package="io.github.cppfw.mordavokne">
 
     <supports-screens
         android:anyDensity="true"
