--- a/homebrew/mordavokne.rb.in
+++ b/homebrew/mordavokne.rb.in
@@ -1,7 +1,7 @@
 class Mordavokne < Formula
   desc "Intrusive C++ cross-platform OpenGL based GUI library."
-  homepage "https://github.com/igagis/mordavokne"
-  url "https://github.com/igagis/mordavokne/archive/$(version).tar.gz"
+  homepage "https://github.com/cppfw/mordavokne"
+  url "https://github.com/cppfw/mordavokne/archive/$(version).tar.gz"
   sha256 "$(sha256)"
 
   depends_on "prorab" => :build
