--- a/pkg-config/mordavokne-opengles2.pc.in
+++ b/pkg-config/mordavokne-opengles2.pc.in
@@ -1,7 +1,7 @@
 Name: mordavokne   # human-readable name
 Description: C++ OpenGL ES 2 GUI library
 Version: $(version)
-URL: https://github.com/igagis/mordavokne
+URL: https://github.com/cppfw/mordavokne
 Requires:
 Conflicts:
 Libs: -lmordavokne-opengles2 -rdynamic
