--- a/msvs_solution/tests/packages.config
+++ b/msvs_solution/tests/packages.config
@@ -1,23 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="cairo_static" version="1.15.4.9" targetFramework="native" />
-  <package id="freetype_static" version="2.10.1.6" targetFramework="native" />
+  <package id="freetype_static" version="2.10.1.7" targetFramework="native" />
   <package id="glew.v140" version="1.12.0" targetFramework="native" />
-  <package id="libcssdom" version="0.1.8" targetFramework="native" />
-  <package id="libjpeg_static" version="6.1.1.8" targetFramework="native" />
-  <package id="libmikroxml" version="0.1.23" targetFramework="native" />
-  <package id="libmorda" version="0.5.141" targetFramework="native" />
-  <package id="libmorda-opengl2-ren" version="0.1.40" targetFramework="native" />
-  <package id="libnitki" version="1.0.32" targetFramework="native" />
-  <package id="libopros" version="1.0.38" targetFramework="native" />
-  <package id="libpapki" version="1.0.82" targetFramework="native" />
-  <package id="libpng_static" version="1.4.1.8" targetFramework="native" />
-  <package id="libsvgdom" version="0.3.39" targetFramework="native" />
-  <package id="libsvgren" version="0.4.71" targetFramework="native" />
-  <package id="libutki" version="1.1.93" targetFramework="native" />
-  <package id="pixman_static" version="0.32.4.10" targetFramework="native" />
-  <package id="pugixml" version="1.10.0" targetFramework="native" />
-  <package id="libpuu" version="0.1.21" targetFramework="native" />
-  <package id="libr4" version="1.0.30" targetFramework="native" />
-  <package id="zlib_static" version="1.2.11.5" targetFramework="native" />
+  <package id="libagg" version="2.7.5" targetFramework="native" />
+  <package id="libcssdom" version="0.1.11" targetFramework="native" />
+  <package id="libjpeg_static" version="6.1.1.9" targetFramework="native" />
+  <package id="libmikroxml" version="0.1.30" targetFramework="native" />
+  <package id="libmorda" version="0.5.145" targetFramework="native" />
+  <package id="libmorda-opengl2-ren" version="0.1.41" targetFramework="native" />
+  <package id="libnitki" version="1.0.36" targetFramework="native" />
+  <package id="libopros" version="1.0.41" targetFramework="native" />
+  <package id="libpapki" version="1.0.86" targetFramework="native" />
+  <package id="libpng_static" version="1.4.1.9" targetFramework="native" />
+  <package id="libpuu" version="0.1.24" targetFramework="native" />
+  <package id="libr4" version="1.0.39" targetFramework="native" />
+  <package id="libsvgdom" version="0.3.49" targetFramework="native" />
+  <package id="libsvgren" version="0.5.2" targetFramework="native" />
+  <package id="libutki" version="1.1.103" targetFramework="native" />
+  <package id="zlib_static" version="1.2.11.7" targetFramework="native" />
 </packages>
