--- a/msvs_solution/libmordavokne/libmordavokne.vcxproj
+++ b/msvs_solution/libmordavokne/libmordavokne.vcxproj
@@ -403,7 +403,7 @@
     <Import Project="..\packages\libr4.1.0.50\build\native\libr4.targets" Condition="Exists('..\packages\libr4.1.0.50\build\native\libr4.targets')" />
     <Import Project="..\packages\libpapki.1.0.90\build\native\libpapki.targets" Condition="Exists('..\packages\libpapki.1.0.90\build\native\libpapki.targets')" />
     <Import Project="..\packages\libcssdom.0.1.13\build\native\libcssdom.targets" Condition="Exists('..\packages\libcssdom.0.1.13\build\native\libcssdom.targets')" />
-    <Import Project="..\packages\libpuu.0.1.25\build\native\libpuu.targets" Condition="Exists('..\packages\libpuu.0.1.25\build\native\libpuu.targets')" />
+    <Import Project="..\packages\libtreeml.0.1.26\build\native\libtreeml.targets" Condition="Exists('..\packages\libtreeml.0.1.26\build\native\libtreeml.targets')" />
     <Import Project="..\packages\libsvgdom.0.3.55\build\native\libsvgdom.targets" Condition="Exists('..\packages\libsvgdom.0.3.55\build\native\libsvgdom.targets')" />
     <Import Project="..\packages\libsvgren.0.5.6\build\native\libsvgren.targets" Condition="Exists('..\packages\libsvgren.0.5.6\build\native\libsvgren.targets')" />
     <Import Project="..\packages\libmorda-opengl2-ren.0.1.42\build\native\libmorda-opengl2-ren.targets" Condition="Exists('..\packages\libmorda-opengl2-ren.0.1.42\build\native\libmorda-opengl2-ren.targets')" />
@@ -426,7 +426,7 @@
     <Error Condition="!Exists('..\packages\libr4.1.0.50\build\native\libr4.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libr4.1.0.50\build\native\libr4.targets'))" />
     <Error Condition="!Exists('..\packages\libpapki.1.0.90\build\native\libpapki.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpapki.1.0.90\build\native\libpapki.targets'))" />
     <Error Condition="!Exists('..\packages\libcssdom.0.1.13\build\native\libcssdom.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libcssdom.0.1.13\build\native\libcssdom.targets'))" />
-    <Error Condition="!Exists('..\packages\libpuu.0.1.25\build\native\libpuu.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpuu.0.1.25\build\native\libpuu.targets'))" />
+    <Error Condition="!Exists('..\packages\libtreeml.0.1.26\build\native\libtreeml.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libtreeml.0.1.26\build\native\libtreeml.targets'))" />
     <Error Condition="!Exists('..\packages\libsvgdom.0.3.55\build\native\libsvgdom.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libsvgdom.0.3.55\build\native\libsvgdom.targets'))" />
     <Error Condition="!Exists('..\packages\libsvgren.0.5.6\build\native\libsvgren.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libsvgren.0.5.6\build\native\libsvgren.targets'))" />
     <Error Condition="!Exists('..\packages\libmorda-opengl2-ren.0.1.42\build\native\libmorda-opengl2-ren.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libmorda-opengl2-ren.0.1.42\build\native\libmorda-opengl2-ren.targets'))" />
