--- a/msvs_solution/tests/packages.config
+++ b/msvs_solution/tests/packages.config
@@ -12,7 +12,7 @@
   <package id="libopros" version="1.0.43" targetFramework="native" />
   <package id="libpapki" version="1.0.90" targetFramework="native" />
   <package id="libpng_static" version="1.4.1.9" targetFramework="native" />
-  <package id="libpuu" version="0.1.25" targetFramework="native" />
+  <package id="libtreeml" version="0.1.26" targetFramework="native" />
   <package id="libr4" version="1.0.50" targetFramework="native" />
   <package id="libsvgdom" version="0.3.55" targetFramework="native" />
   <package id="libsvgren" version="0.5.6" targetFramework="native" />
