--- a/msvs_solution/tests/tests.vcxproj
+++ b/msvs_solution/tests/tests.vcxproj
@@ -440,7 +440,7 @@
     <Import Project="..\packages\libpapki.1.0.90\build\native\libpapki.targets" Condition="Exists('..\packages\libpapki.1.0.90\build\native\libpapki.targets')" />
     <Import Project="..\packages\libutki.1.1.111\build\native\libutki.targets" Condition="Exists('..\packages\libutki.1.1.111\build\native\libutki.targets')" />
     <Import Project="..\packages\libr4.1.0.50\build\native\libr4.targets" Condition="Exists('..\packages\libr4.1.0.50\build\native\libr4.targets')" />
-    <Import Project="..\packages\libpuu.0.1.25\build\native\libpuu.targets" Condition="Exists('..\packages\libpuu.0.1.25\build\native\libpuu.targets')" />
+    <Import Project="..\packages\libtreeml.0.1.26\build\native\libtreeml.targets" Condition="Exists('..\packages\libtreeml.0.1.26\build\native\libtreeml.targets')" />
     <Import Project="..\packages\libsvgdom.0.3.55\build\native\libsvgdom.targets" Condition="Exists('..\packages\libsvgdom.0.3.55\build\native\libsvgdom.targets')" />
     <Import Project="..\packages\libmorda-opengl2-ren.0.1.42\build\native\libmorda-opengl2-ren.targets" Condition="Exists('..\packages\libmorda-opengl2-ren.0.1.42\build\native\libmorda-opengl2-ren.targets')" />
     <Import Project="..\packages\libmorda.0.5.159\build\native\libmorda.targets" Condition="Exists('..\packages\libmorda.0.5.159\build\native\libmorda.targets')" />
@@ -463,7 +463,7 @@
     <Error Condition="!Exists('..\packages\libpapki.1.0.90\build\native\libpapki.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpapki.1.0.90\build\native\libpapki.targets'))" />
     <Error Condition="!Exists('..\packages\libutki.1.1.111\build\native\libutki.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libutki.1.1.111\build\native\libutki.targets'))" />
     <Error Condition="!Exists('..\packages\libr4.1.0.50\build\native\libr4.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libr4.1.0.50\build\native\libr4.targets'))" />
-    <Error Condition="!Exists('..\packages\libpuu.0.1.25\build\native\libpuu.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpuu.0.1.25\build\native\libpuu.targets'))" />
+    <Error Condition="!Exists('..\packages\libtreeml.0.1.26\build\native\libtreeml.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libtreeml.0.1.26\build\native\libtreeml.targets'))" />
     <Error Condition="!Exists('..\packages\libsvgdom.0.3.55\build\native\libsvgdom.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libsvgdom.0.3.55\build\native\libsvgdom.targets'))" />
     <Error Condition="!Exists('..\packages\libmorda-opengl2-ren.0.1.42\build\native\libmorda-opengl2-ren.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libmorda-opengl2-ren.0.1.42\build\native\libmorda-opengl2-ren.targets'))" />
     <Error Condition="!Exists('..\packages\libmorda.0.5.159\build\native\libmorda.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libmorda.0.5.159\build\native\libmorda.targets'))" />
