--- a/nuget/nuget.autopkg.in
+++ b/nuget/nuget.autopkg.in
@@ -37,7 +37,7 @@ nuget{
 			glew.v140/1.12.0;
 			libpapki/1.0.91;
 			libopros/1.0.44;
-			libpuu/0.1.25;
+			libtreeml/0.1.26;
 			libutki/1.1.112;
 		};
 	}
