--- a/xcode/Podfile
+++ b/xcode/Podfile
@@ -8,7 +8,7 @@ target "mordavokne" do
 	pod 'utki', '>= 1.1.112'
 	pod 'papki', '>= 1.0.91'
 	pod 'r4', '>= 0.1.51'
-	pod 'puu', '>= 0.1.25'
+	pod 'treeml', '>= 0.1.26'
 	pod 'morda', '>= 0.5.160'
 	pod 'morda-opengles2-ren', '>= 0.1.36'
 end
