--- a/msvs_solution/tests/packages.config
+++ b/msvs_solution/tests/packages.config
@@ -1,21 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="freetype_static" version="2.10.1.7" targetFramework="native" />
+  <package id="freetype_static" version="2.10.1.9" targetFramework="native" />
   <package id="glew.v140" version="1.12.0" targetFramework="native" />
-  <package id="libagg" version="2.8.1" targetFramework="native" />
-  <package id="libcssdom" version="0.1.13" targetFramework="native" />
-  <package id="libjpeg_static" version="6.1.1.9" targetFramework="native" />
-  <package id="libmikroxml" version="0.1.32" targetFramework="native" />
-  <package id="libmorda" version="0.5.153" targetFramework="native" />
-  <package id="libmorda-opengl2-ren" version="0.1.42" targetFramework="native" />
-  <package id="libnitki" version="1.0.38" targetFramework="native" />
-  <package id="libopros" version="1.0.43" targetFramework="native" />
-  <package id="libpapki" version="1.0.90" targetFramework="native" />
-  <package id="libpng_static" version="1.4.1.9" targetFramework="native" />
-  <package id="libtreeml" version="0.1.26" targetFramework="native" />
-  <package id="libr4" version="1.0.50" targetFramework="native" />
-  <package id="libsvgdom" version="0.3.55" targetFramework="native" />
-  <package id="libsvgren" version="0.5.6" targetFramework="native" />
-  <package id="libutki" version="1.1.111" targetFramework="native" />
-  <package id="zlib_static" version="1.2.11.7" targetFramework="native" />
+  <package id="libagg" version="2.8.6" targetFramework="native" />
+  <package id="libcssom" version="0.1.21" targetFramework="native" />
+  <package id="libjpeg_static" version="6.1.1.11" targetFramework="native" />
+  <package id="libmikroxml" version="0.1.38" targetFramework="native" />
+  <package id="libmorda" version="0.5.164" targetFramework="native" />
+  <package id="libmorda-opengl2-ren" version="0.1.47" targetFramework="native" />
+  <package id="libnitki" version="1.0.45" targetFramework="native" />
+  <package id="libopros" version="1.0.51" targetFramework="native" />
+  <package id="libpapki" version="1.0.99" targetFramework="native" />
+  <package id="libpng_static" version="1.4.1.11" targetFramework="native" />
+  <package id="libr4" version="1.0.55" targetFramework="native" />
+  <package id="libsvgdom" version="0.3.63" targetFramework="native" />
+  <package id="libsvgren" version="0.5.13" targetFramework="native" />
+  <package id="libtreeml" version="0.1.47" targetFramework="native" />
+  <package id="libutki" version="1.1.139" targetFramework="native" />
+  <package id="zlib_static" version="1.2.11.9" targetFramework="native" />
 </packages>
