--- a/homebrew/mordavokne.rb.in
+++ b/homebrew/mordavokne.rb.in
@@ -17,7 +17,7 @@ class Mordavokne < Formula
 
   def install
     ENV['PATH'] += ':/usr/local/bin'
-    system "make", "-f", "src/makefile", "install", "PREFIX=#{prefix}"
+    system "make", "install", "PREFIX=#{prefix}"
   end
 
   #test do
