--- a/android/mordavokne-$(version).pom.in
+++ b/android/mordavokne-$(version).pom.in
@@ -37,7 +37,7 @@
 	  </dependency>
 	  <dependency>
 		  <groupId>io.github.cppfw</groupId>
-		  <artifactId>morda-opengles2-ren</artifactId>
+		  <artifactId>morda-render-opengles</artifactId>
 		  <version>[0.1.37,)</version>
 		  <type>aar</type>
 		  <scope>compile</scope>
