--- a/android/mordavokne/build.gradle
+++ b/android/mordavokne/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     implementation 'io.github.cppfw:papki:+'
     implementation 'io.github.cppfw:r4:+'
     implementation 'io.github.cppfw:morda:+'
-    implementation 'io.github.cppfw:morda-opengles2-ren:+'
+    implementation 'io.github.cppfw:morda-render-opengles:+'
     implementation 'io.github.cppfw:nitki:+'
 }
 
