--- a/msys2/PKGBUILD.in
+++ b/msys2/PKGBUILD.in
@@ -29,7 +29,7 @@ url="http://github.com/cppfw/${packageName}"
 license=('MIT')
 groups=()
 
-depends=("${pkgPrefix}morda" "${pkgPrefix}morda-opengl2-ren")
+depends=("${pkgPrefix}morda" "${pkgPrefix}morda-render-opengl")
 
 makedepends=('myci' 'prorab' 'prorab-extra' 'doxygen')
 checkdepends=('myci')
