--- a/src/makefile
+++ b/src/makefile
@@ -13,17 +13,15 @@ define mordavokne_rules
     this_name := mordavokne-$1
 
     ifeq ($(os), linux)
-        this_cxxflags += -fPIC # generate position independent code
         this_ldlibs += -lGLEW -ldl -lnitki -lopros -lX11
     else ifeq ($(os), windows)
         this_ldlibs += -lgdi32 -lopengl32 -lglew32
     else ifeq ($(os), macosx)
-        this_cxxflags += -stdlib=libc++ # this is needed to be able to use c++11 std lib
-        this_ldlibs += -lGLEW -lc++
+        this_ldlibs += -lGLEW
         this_ldlibs += -framework Cocoa -framework OpenGL -ldl
     endif
 
-    this_ldlibs += -lmorda -lpapki -ltreeml -lstdc++
+    this_ldlibs += -lmorda -lpapki -ltreeml
 
     ifeq ($(os), macosx)
         this_mm_obj := $$(d)$$(this_out_dir)obj_$$(this_name)/objc/mordavokne/glue/macosx/glue.mm.o
@@ -32,16 +30,16 @@ define mordavokne_rules
             $$(this_mm_obj): $$(d)mordavokne/glue/macosx/glue.mm
 $(.RECIPEPREFIX)@echo compile $$$$<...
 $(.RECIPEPREFIX)$(a)mkdir -p $$$$(dir $$$$@)
-$(.RECIPEPREFIX)$(a)$(this_cc) -ObjC++ -std=c++11 -g -c -o "$$$$@" $$(this_objcflags) $$$$<
+$(.RECIPEPREFIX)$(a)$(this_cc) -ObjC++ -std=c++17 -g -c -o "$$$$@" $$(this_objcflags) $$$$<
         endef
         $$(eval $$(this_subrules))
 
     endif
 
     this_cxxflags += -DMORDAVOKNE_RENDER_$(shell echo $1 | tr '[:lower:]' '[:upper:]')
-    this_ldlibs += -lmorda-$1-ren
+    this_ldlibs += -lmorda-render-$1
 
-    ifeq ($1,opengles2)
+    ifeq ($1,opengles)
         ifeq ($(raspberrypi), true)
             this_cxxflags += -DMORDAVOKNE_RASPBERRYPI -I/opt/vc/include
             this_ldflags += -L/opt/vc/lib
@@ -61,10 +59,10 @@ $(.RECIPEPREFIX)$(a)$(this_cc) -ObjC++ -std=c++11 -g -c -o "$$$$@" $$(this_objcf
     $$(eval $$(prorab-clear-this-vars))
 endef
 
-$(eval $(call mordavokne_rules,opengl2))
+$(eval $(call mordavokne_rules,opengl))
 
 ifeq ($(os), linux)
-    $(eval $(call mordavokne_rules,opengles2))
+    $(eval $(call mordavokne_rules,opengles))
 endif
 
 # clear variable
