--- a/tests/app/makefile
+++ b/tests/app/makefile
@@ -1,4 +1,5 @@
 include prorab.mk
+include prorab-test.mk
 
 include $(d)../../raspberrypi.mk
 
@@ -6,33 +7,18 @@ this_name := mordavokne-test
 
 $(eval $(call prorab-config, ../../config))
 
-this_srcs += src/main.cpp
-
-this_cxxflags += -Wall
-this_cxxflags += -Wno-comment # no warnings on nested comments
-this_cxxflags += -Werror
-this_cxxflags += -DDEBUG
-this_cxxflags += -fstrict-aliasing
-this_cxxflags += -g
-this_cxxflags += -std=c++17
+this_srcs += $(call prorab-src-dir, src)
 
 ifeq ($(ogles2), true)
-    this_mordavoknelib := libmordavokne-opengles2
-#    this_ldlibs += -lGLESv2
-
-#    ifeq ($(raspberrypi), true)
-#        this_ldlibs += -L/opt/vc/lib
-#    endif
-
+    this_mordavoknelib := libmordavokne-opengles
 else
-    this_mordavoknelib := libmordavokne-opengl2
-#    this_ldlibs += -lGL
+    this_mordavoknelib := libmordavokne-opengl
 endif
 
-this_ldlibs += $(d)../../src/out/$(c)/$(this_mordavoknelib)$(dot_so)
+this_ldlibs += ../../src/out/$(c)/$(this_mordavoknelib)$(dot_so)
 
 ifeq ($(os),windows)
-    this_ldlibs += -lmingw32 #these should go first, otherwise linker will complain about undefined reference to WinMain
+    this_ldlibs += -lmingw32 # these should go first, otherwise linker will complain about undefined reference to WinMain
     this_ldlibs += -lglew32 -lopengl32 -lpng -ljpeg -lz -lfreetype -mwindows
 else ifeq ($(os),macosx)
     this_ldlibs += -lGLEW -framework OpenGL -framework Cocoa -lpng -ljpeg -lfreetype
@@ -42,31 +28,14 @@ else ifeq ($(os),linux)
     this_ldflags += -rdynamic
 endif
 
-this_ldlibs += -ltreeml -lmorda -lutki -lpapki -lm -lstdc++
+this_ldlibs += -ltreeml -lmorda -lutki -lpapki -lm
 
 $(eval $(prorab-build-app))
 
-define this_rules
-run:: $(prorab_this_name)
-	@echo running $$^...
-	@(cd $(d); LD_LIBRARY_PATH=../../src/out/$(c) $$^)
-endef
-$(eval $(this_rules))
-
-# add dependency on libmordavokne
-ifeq ($(os),windows)
-    $(d)$(this_mordavoknelib)$(dot_so): $(abspath $(d)../../src/out/$(c)/$(this_mordavoknelib)$(dot_so))
-	@cp $< $@
-
-    $(prorab_this_name): $(d)$(this_mordavoknelib)$(dot_so)
-
-    define this_rules
-        clean::
-		@rm -f $(d)$(this_mordavoknelib)$(dot_so)
-    endef
-    $(eval $(this_rules))
-else
-    $(prorab_this_name): $(abspath $(d)../../src/out/$(c)/$(this_mordavoknelib)$(dot_so))
-endif
+this_run_name := app
+this_test_cmd := $(prorab_this_name)
+this_test_deps := $(prorab_this_name) ../../src/out/$(c)/$(this_mordavoknelib)$(dot_so)
+this_test_ld_path := ../../src/out/$(c)
+$(eval $(prorab-run))
 
 $(eval $(call prorab-include, ../../src/makefile))
